--- a/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
+++ b/src/app/shared/components/header/user-dropdown/user-dropdown.component.html
@@ -1,10 +1,10 @@
 <div class="relative">
-  @if (currentUser$ | async; as user) {
+  @if (currentUser) {
     <button (click)="toggleDropdown()" class="flex items-center text-gray-700 dropdown-toggle dark:text-gray-400">
       <span class="mr-3 overflow-hidden rounded-full h-11 w-11">
-        <img [src]="getAvatarUrl(user)" alt="User" />
+        <img [src]="getAvatarUrl()" alt="User" />
       </span>
-      <span class="block mr-1 font-medium text-theme-sm">{{ user.full_name }}</span>
+      <span class="block mr-1 font-medium text-theme-sm">{{ getUserName() }}</span>
       <svg [ngClass]="{
           'stroke-gray-500 dark:stroke-gray-400 transition-transform duration-200': true,
           'rotate-180': isOpen
@@ -18,10 +18,10 @@
       className="absolute right-0 mt-[17px] flex w-[260px] flex-col rounded-2xl border border-gray-200 bg-white p-3 shadow-theme-lg dark:border-gray-800 dark:bg-gray-dark">
       <div>
         <span class="block font-medium text-gray-700 text-theme-sm dark:text-gray-400">
-          {{ getUserName(user) }}
+          {{ getUserName() }}
         </span>
         <span class="mt-0.5 block text-theme-xs text-gray-500 dark:text-gray-400">
-          {{ getUserEmail(user) }}
+          {{ getUserEmail() }}
         </span>
       </div>
 
